<resources>
    <string name="app_name">SLAALV</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="client_logo">LOGO</string>
    <string name="username">Username</string>
    <string name="login_now">SIGN IN</string>
    <string name="not_a_member">Not a member</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">Don\'t have an account?</string>
</resources>
