<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_back"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/img_front"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/web_logo_sl" />

        <RelativeLayout
            android:id="@+id/relay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_front">

            <TextView
                android:id="@+id/tv1_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="@dimen/cardview_compat_inset_shadow">


                    <LinearLayout
                        android:id="@+id/lay1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/login1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="16dp"
                            android:text="@string/username"
                            android:textAllCaps="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:targetApi="jelly_bean" />

                        <EditText
                            android:id="@+id/ed_uname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="15dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/et_back"
                            android:fontFamily="sans-serif-light"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:padding="16dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            tools:ignore="LabelFor"
                            tools:targetApi="o" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="110dp"
                        android:background="@drawable/login1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="16dp"
                            android:text="@string/password"
                            android:textAllCaps="true"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:targetApi="jelly_bean" />

                        <EditText
                            android:id="@+id/ed_pass"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/et_back"
                            android:fontFamily="sans-serif-light"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            tools:ignore="LabelFor"
                            tools:targetApi="o" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linear1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_back"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/not_a_member"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/signup_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"
            tools:targetApi="jelly_bean" />
    </RelativeLayout>

</RelativeLayout>
</ScrollView>